--- a/debian/control
+++ b/debian/control
@@ -2,13 +2,14 @@ Source: deepin-screen-recorder
 Section: utils
 Priority: optional
 Maintainer: Deepin Packages Builder <packages@deepin.com>
-Build-Depends: debhelper (>= 9), pkg-config, dpkg-dev, qt5-qmake, qt5-default, libxcb-util0-dev, libqt5x11extras5-dev, qttools5-dev-tools, libdtkbase-dev, libdtkwidget-dev, libxtst-dev
+Build-Depends: debhelper (>= 9), pkg-config, qt5-qmake, qt5-default, 
+ libxcb-util0-dev, libqt5x11extras5-dev, qttools5-dev-tools, 
+ libdtkbase-dev, libdtkwidget-dev, libxtst-dev
 Standards-Version: 3.9.8
 Homepage: https://github.com/manateelazycat/deepin-screen-recorder
-#Vcs-Git: https://anonscm.debian.org/collab-maint/deepin-screen-recorder.git
-#Vcs-Browser: https://anonscm.debian.org/cgit/collab-maint/deepin-screen-recorder.git
 
 Package: deepin-screen-recorder
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, deepin-notifications (> 2.3.8-1), byzanz, ffmpeg, libdtkbase (>= 0.1.10), libdtkwidget (>= 0.1.10), libxtst6
+Depends: ${shlibs:Depends}, ${misc:Depends}, deepin-notifications (> 2.3.8-1), byzanz, ffmpeg
 Description: Simple recorder tools for deepin.
+ A simple recorder tools for deepin.
